## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = lab6_carrigan

lab6_carrigan_SOURCES = \
	main.cc \
	intdlllist.cc \
	intdlllist.h \
	intdllnode.cc \
	intdllnode.h

lab6_carrigan_LDFLAGS = 

lab6_carrigan_LDADD = 


